# memdesc

./: .gitignore  README.md  build.bat  build.sh
.github/workflows/: build_and_deploy.yml  build_and_test.yml
examples/: diamond.mdesc  importee.mdesc  importer.mdesc  other_importer.mdesc
src/: .clang-tidy  CMakeLists.txt  ast.cc  ast.h  ast_functions.cc  ast_functions.h  ast_functions_test.cc  ast_sizing.cc  ast_sizing.h  ast_test.cc  ast_test_helpers.cc  ast_test_helpers.h  command_line_arguments.cc  command_line_arguments.h  dependencies_file.cc  dependencies_file.h  lexer.l  lexer_wrapper.cc  lexer_wrapper.h  main.cc  parse_error.cc  parse_error.h  parse_file_tests.cc  parse_results.cc  parse_results.h  parser.y  parser_helper_functions.cc  parser_helper_functions.h  parser_wrapper.cc  parser_wrapper.h  process_import_statement.cc  process_import_statement.h  target_registry.cc  target_registry.h
src/end_to_end_c_tests/: multiple_structs.cc  multiple_structs.mdesc  multiple_structs_a.mdesc  multiple_structs_b.mdesc  multiple_structs_c.mdesc  simple.c  simple.cc  simple_desc.mdesc
src/examples/: importee_with_preamble.mdesc  importer.mdesc  importer_with_error.mdesc  importer_with_preamble.mdesc  other_importer.mdesc  simple.mdesc  simple_assuming_preamble.mdesc
src/runtime_data_files/: README.md  preamble_default.mdesc
src/targets/: ast_dump.cc  c.cc
